[BE] feat: SSE dispatch bounded pool + 부하 측정 시나리오 10 추가
- EmitterDispatcher: 큐 포화 시 emitter.completeWithError() 호출 및 큐 포화 카운터 추가
- SseMetrics: upbid.sse.queue.saturated 카운터 추가
- SseRedisConfig: dispatch executor를 bounded fixed pool로 교체
  (newCachedThreadPool → newFixedThreadPool(dispatchPoolSize))
  VT 무제한 생성으로 인한 CPU 폭발 방지, 기본값 4
- SseProperties: dispatchPoolSize 필드 추가
- application.yaml: upbid.sse.dispatch-pool-size 바인딩 추가
- scenario10.js: SSE dispatch 부하 시나리오 (VT vs bounded pool 비교)
- run.sh: --sse-vt / --no-sse-vt / --sse-pool 플래그, 시나리오 10,
  jvm_threads_live_max / sse_broadcast_p99 / sse_queue_saturated 지표 추가